--- a/pinterest/templates/perfil.html
+++ b/pinterest/templates/perfil.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>PERFIL USUÁRIOS</h1>
-    <p>Agora vamos continuar o site</p>
+    <p>Perfil do usuário: {{ usuario }}</p>
+
+    <a href="/">Home</a>
 </body>
 </html>
