--- a/pinterest/templates/homepage.html
+++ b/pinterest/templates/homepage.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="/css/homepage.css">
+    
+    <link rel="stylesheet" href="/css/styles.css">
+    <title>
+        {% block title %} 
+        Homepage 
+        {% endblock %}
+    </title>
 </head>
+
+
+{% block body %}
 <body>
     <h1>HOMEPAGE SITE</h1>
     <p>Agora vamos continuar o site</p>
 </body>
 </html>
+
+{% endblock %}
