--- a/pinterest/templates/perfil.html
+++ b/pinterest/templates/perfil.html
@@ -8,6 +8,6 @@
 
     <h1>PERFIL USUÁRIOS</h1>
     <p>Perfil do usuário: {{ usuario }}</p>
-    <a href="/">Home</a>
+    <a href="{{url_for('logout')}}">Sair</a>
 
 {% endblock %}
