--- a/pinterest/templates/homepage.html
+++ b/pinterest/templates/homepage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <title>
         {% block title %} 
         Homepage 
