--- a/pinterest/templates/perfil.html
+++ b/pinterest/templates/perfil.html
@@ -7,7 +7,11 @@
 {% block body %}
 
     <h1>PERFIL USUÁRIOS</h1>
-    <p>Perfil do usuário: {{ usuario }}</p>
+    <p>Perfil do usuário: {{ usuario.usuario }}</p>
     <a href="{{url_for('logout')}}">Sair</a>
+
+{% for foto in usuario.foto %}
+
+{% endfor %}
 
 {% endblock %}
