layout tela de login

--- a/pinterest/templates/criar-conta.html
+++ b/pinterest/templates/criar-conta.html
@@ -28,6 +28,7 @@
         <p>{{ formcriarconta.botao_confirmacao }}</p>        
 
     </form>
+    <a href="{{ url_for('homepage') }}">Já tem uma conta? Então faça login</a>
 </div>
 
 {% endblock %}
