--- a/pinterest/templates/homepage.html
+++ b/pinterest/templates/homepage.html
@@ -1,36 +1,101 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
 
+<!-- head -->
 <head>
-    <meta charset="UTF-8">
-    
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <title>
         {% block title %} 
-        Homepage 
+        InterPinterest  
         {% endblock %}
     </title>
-</head>
+  </head>
+<!--/ head -->
 
+<!-- Block Body -->
+  {% block body %}
+  <body class="overflow-hidden">
+    <div class="container">
+      <header>
+        <nav>
+          <div class="logo-pinterest">
+            <svg
+              height="40"
+              viewBox="-3 -3 82 82"
+              width="40"
+              style="display: block"
+            >
+              <title>FakePinterest logo</title>
+              <circle cx="38" cy="38" fill="white" r="40"></circle>
+              <path
+                d="M27.5 71c3.3 1 6.7 1.6 10.3 1.6C57 72.6 72.6 57 72.6 37.8 72.6 18.6 57 3 37.8 3 18.6 3 3 18.6 3 37.8c0 14.8 9.3 27.5 22.4 32.5-.3-2.7-.6-7.2 0-10.3l4-17.2s-1-2-1-5.2c0-4.8 3-8.4 6.4-8.4 3 0 4.4 2.2 4.4 5 0 3-2 7.3-3 11.4C35.6 49 38 52 41.5 52c6.2 0 11-6.6 11-16 0-8.3-6-14-14.6-14-9.8 0-15.6 7.3-15.6 15 0 3 1 6 2.6 8 .3.2.3.5.2 1l-1 3.8c0 .6-.4.8-1 .4-4.4-2-7-8.3-7-13.4 0-11 7.8-21 22.8-21 12 0 21.3 8.6 21.3 20 0 12-7.4 21.6-18 21.6-3.4 0-6.7-1.8-7.8-4L32 61.7c-.8 3-3 7-4.5 9.4z"
+                fill="#e60023"
+                fill-rule="evenodd"
+              ></path>
+            </svg>
+            <h1>FakePinterest</h1>
+          </div>
 
-{% block body %}
-<body class="centralizar">
-    <h1>HOMEPAGE SITE</h1>
-    <h3>Agora vamos continuar o site</h3>
+          <div class="restante-nav">
+            <a href="" class="link-nav">About</a>
+            <a href="" class="link-nav">Business</a>
+            <a href="" class="link-nav">Blog</a>
+          </div>
+        </nav>
+      </header>
 
+      <img src="{{ url_for('static', filename='image/fotos_site/fundo-login.png') }}" class="bg-imagem-pinterest" />
+
+<!--<p>Olá, {{ usuario }}!</p>-->      
+
+<!-- Formulário -->
+
+<div class="container-popup">
+        
     {% block formulario %}
+        <form method="POST" class="popup">
+            {{ formlogin.csrf_token }}
+          <svg
+            height="40"
+            viewBox="-3 -3 82 82"
+            width="40"
+            style="display: block"
+          >
+            <title>Pinterest logo</title>
+            <circle cx="38" cy="38" fill="white" r="40"></circle>
+            <path
+              d="M27.5 71c3.3 1 6.7 1.6 10.3 1.6C57 72.6 72.6 57 72.6 37.8 72.6 18.6 57 3 37.8 3 18.6 3 3 18.6 3 37.8c0 14.8 9.3 27.5 22.4 32.5-.3-2.7-.6-7.2 0-10.3l4-17.2s-1-2-1-5.2c0-4.8 3-8.4 6.4-8.4 3 0 4.4 2.2 4.4 5 0 3-2 7.3-3 11.4C35.6 49 38 52 41.5 52c6.2 0 11-6.6 11-16 0-8.3-6-14-14.6-14-9.8 0-15.6 7.3-15.6 15 0 3 1 6 2.6 8 .3.2.3.5.2 1l-1 3.8c0 .6-.4.8-1 .4-4.4-2-7-8.3-7-13.4 0-11 7.8-21 22.8-21 12 0 21.3 8.6 21.3 20 0 12-7.4 21.6-18 21.6-3.4 0-6.7-1.8-7.8-4L32 61.7c-.8 3-3 7-4.5 9.4z"
+              fill="#e60023"
+              fill-rule="evenodd"
+            ></path>
+          </svg>
 
-    <p>Olá, {{ usuario }}!</p>
-    <form method="POST">
-        {{ formlogin.csrf_token }}
-        <p>{{ formlogin.email.label }} {{ formlogin.email }}</p>
-        <p>{{ formlogin.senha.label }} {{ formlogin.senha }}</p>
-        <p>{{ formlogin.botao_confirmacao }}</p>        
-    </form>
+          <h2>Bem-vindo(a) ao InterPinterest</h2>
 
-    {% endblock %}
-    
-</body>
-</html>
+          <div class="div-input">
+            <label for="email" class="label">E-mail:</label>
+            <input type="email" id="email" name="email" class="input" placeholder="Digite seu e-mail aqui">
+          </div>
 
+          <div class="div-input">
+            <label for="senha" class="label">Senha:</label>
+            <input type="password" id="senha" name="senha" class="input" placeholder="Digite sua senha aqui">
+          </div>
+          
+
+          <div class="div-botao">
+            {{ formlogin.botao_confirmacao(class="botao-login") }} 
+            <a href="{{ url_for('criar_conta') }}" class="link-criarconta">Não tem uma conta? Crie aqui</a>
+          </div>
+        </form> 
+        {% endblock %} 
+<!--/ Formulário -->
+        </div>
+      </div>
+  </body>
 {% endblock %}
+<!--/ Block Body -->
+</html>
