--- a/pinterest/templates/perfil.html
+++ b/pinterest/templates/perfil.html
@@ -1,28 +1,60 @@
 {% extends "homepage.html" %}
 
 
-{% block title %} Perfil - {{usuario}} {% endblock %}
+{% block title %} Perfil - {{usuario.usuario}} {% endblock %}
 
 
 {% block body %}
 {% include 'navbar.html' %}
 
 
-    <h1>PERFIL USUÁRIOS</h1>
-    <p>Perfil do usuário: {{ usuario.usuario }}</p>
-    
+    <h2 class="perfil">PERFIL USUÁRIOS</h2>
 
+    <div class="container"></div>
     {% if formfoto %}
-    <form method="POST" enctype="multipart/form-data">
-        {{ formfoto.csrf_token }}
-        {{ formfoto.foto }}
-        {{ formfoto.botao_confirmacao }}
-    </form> 
+
+
+        <form class="bloco-add-img" method="POST" enctype="multipart/form-data">
+            {{ formfoto.csrf_token }}
+          <h2>{{usuario.usuario}} - Enviar foto</h2>
+  
+  
+          <div class="bloco-arquivo">
+              <label for="foto" class="botao-arquivo">
+                  Escolher arquivo
+                  {{ formfoto.foto(class="input-arquivo", id="foto") }}
+              </label>
+              <span id="imagem-arquivo" class=""></span>
+          </div>
+          {{ formfoto.botao_confirmacao (class="botao-login")}}
+      </form>
+ 
+    {% else %}
+        <div class="bloco-add-img">
+            <h2>{{usuario.usuario}} - Ver Perfil</h2>
+        </div>
     {% endif %}
+    </div>
 
-
+<div class="conteudo">
 {% for foto in usuario.foto %}
-    <img src="{{ url_for('static', filename='/image/fotos_post/{}'.format(foto.imagem)) }}">
+    <div class="bloco-imagem">
+      <img src="{{ url_for('static', filename='/image/fotos_post/{}'.format(foto.imagem)) }}" />
+    </div>
 {% endfor %}
+</div>
 
+    <script>
+        let input = document.getElementById('foto');
+        let imagemArquivo = document.getElementById('imagem-arquivo');
+        
+        input.addEventListener('change', () => {
+            let inputImagem = document.querySelector('input[type=file]').files[0];
+        
+            imagemArquivo.classList.add('visivel');
+            imagemArquivo.innerText = inputImagem.name;
+            });
+    </script>
+
+</body>
 {% endblock %}
