--- a/pinterest/static/css/styles.css
+++ b/pinterest/static/css/styles.css
@@ -23,6 +23,42 @@
     display: inline;
   }
   
+
+  .perfil {
+    color: #c00;
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  
+  .nome-usuario {
+    text-align: center;
+    font-size: 15px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    transition: color 0.2s; /* Adiciona uma transição suave na mudança de cor */
+  }
+  
+  .nome-usuario:hover {
+    color: blue; /* Altere a cor que você deseja para o efeito hover */
+  }
+  
+
+  .nome-usuario {
+    /* ... estilos anteriores ... */
+    text-decoration: none; /* Remove o sublinhado padrão */
+    transition: text-decoration 0.2s; /* Adiciona uma transição suave na mudança de sublinhado */
+  }
+  
+  .nome-usuario:hover {
+    text-decoration: underline; /* Adiciona sublinhado ao passar o mouse sobre o nome do usuário */
+  }
+  
+
+
   img {
     width: 100%;
   }
@@ -170,7 +206,8 @@
     text-decoration: none;
   }
   
-  .conteudo {
+  /* Estilos padrão para 5 imagens em todas as telas */
+.conteudo {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     width: 100%;
@@ -180,6 +217,15 @@
     padding: 15px;
     box-sizing: border-box;
   }
+  
+  /* Estilos para telas menores que 640px */
+  @media (max-width: 640px) {
+    .conteudo {
+      grid-template-columns: 1fr 1fr; /* 2 imagens por linha */
+      row-gap: 15px; /* Reduz o espaçamento vertical entre as imagens */
+    }
+  }
+  
   
   .bloco-imagem img {
     border-radius: 20px;
