--- a/pinterest/templates/homepage.html
+++ b/pinterest/templates/homepage.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='image/fotos_site/pint.png') }}">
     <title>
         {% block title %} 
         InterPinterest  
